# pepe-studio

./: .editorconfig  .gitignore  .prettierrc  Aufit.md  CALENDRIER_REFACTORING_V1.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MonCv.html  README.md  REFACTORING_ROADMAP.md  RELEASE_CHECKLIST.md  architecture.md  audit front.md  build-log.txt  create_icon.py  create_icon_pillow.py  eslint.config.mjs  instruction.md  next.config.mjs  package-lock.json  package.json  qwen36-clean-test-results.json  qwen36-compare-results.json  tailwind.config.ts  todo.md  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo
scripts/: patch_useLlama_j12.ps1  tauri-dev.mjs
src/: injector.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_server.rs  chat_api.rs  db.rs  dev_server.rs  file_ops.rs  health.rs  http_client.rs  hw_info.rs  image_gen.rs  llama_sidecar.rs  logger.rs  main.rs  mcp.rs  media.rs  model_metadata.rs  models_api.rs  rate_limit.rs  scraper.rs  search.rs  shell_ops.rs  skills.rs  state.rs  terminal_manager.rs  terminal_parser.rs  terminal_pty.rs  tools_api.rs
src-tauri/src/db/: conversations.rs  documents.rs  mod.rs  models.rs  schema.rs
src-tauri/src/image_gen/: generate.rs  helpers.rs  mod.rs  server.rs
src-tauri/src/llama/: lifecycle.rs  mod.rs  streaming.rs
src-tauri/src/skills/: executor.rs  manager.rs  mod.rs
src/app/: globals.css  (+2 more)
tests/: imageGenFlow.test.ts  patchParsing.test.ts  toolDispatch.test.ts  toolGroupResolver.test.ts  toolJsonParser.test.ts  toolParsing.test.ts
tmp/: fix_import_order.ps1  patch_toolWebHandlers.ps1  (+1 more)
(+172 files in other folders)
