[package]
name = "src-tauri"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "1.5", features = ["fs-all", "process-all", "shell-all", "dialog-all"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
scraper = "0.20"
url = "2"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = { version = "0.30", default-features = false }
chrono = { version = "0.4", features = ["clock", "serde"] }
tiny_http = "0.12"
base64 = "0.21"
portable-pty = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
